--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2>Officers</h2>
         <div class="people">
           <figure class="person">
-            <img src="Sudhith.jpg" alt="President Sudhith Mannuru" />
+            <img src="Sudhith.HEIC" alt="President Sudhith Mannuru" />
             <figcaption><strong>President</strong><br><span class="muted">Sudhith Mannuru</span></figcaption>
           </figure>
           <figure class="person">
