--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <figcaption><strong>VP of Marketing</strong><br><span class="muted">Mandeep Pathak</span></figcaption>
           </figure>
           <figure class="person">
-            <img src="Sai.jpg" alt="VP of Operations Sai Devineni" />
+            <img src="Saifinal.jpg" alt="VP of Operations Sai Devineni" />
             <figcaption><strong>VP of Operations</strong><br><span class="muted">Sai Devineni</span></figcaption>
           </figure>
           <figure class="person">
